poritt/examples/errors/error-not-in-scope.ptt
define const : forall (A B : U) -> A -> B -> A
             = \ _ _ x _ -> f y
